--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL =/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL =/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL =/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL =/
-
+#clerk webhook
+WEBHOOK_SECRETE = whsec_bPkjYzK9k/33OT1sgs/iegVceKIsklW8
 #Mongodb
 MONGO_URL = mongodb+srv://vbvijay84:admin123@cluster0.zjemdpo.mongodb.net/?retryWrites=true&w=majority
 
