--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL =/
 #clerk webhook
 WEBHOOK_SECRETE = whsec_bPkjYzK9k/33OT1sgs/iegVceKIsklW8
 #Mongodb
-MONGO_URL = mongodb+srv://vbvijay84:admin123@cluster0.zjemdpo.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://vbvijay84:admin123@cluster0.zjemdpo.mongodb.net/?retryWrites=true&w=majority
 
 
 
