upload field added

--- a/.env
+++ b/.env
@@ -10,6 +10,19 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL =/
 WEBHOOK_SECRET=whsec_lxjND01N+vrWSBOcZNXphFI8QSdcvkFy
 #Mongodb
 MONGODB_URL =mongodb+srv://vbvijay84:admin123@cluster0.zjemdpo.mongodb.net/?retryWrites=true&w=majority
+#Cloudinary
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dm9pkxus4
+CLOUDINARY_API_KEY=873762269638431
+CLOUDINARY_API_SECRET=8evFdkC6ICCDlYxRui7PI6sDGn8
 
+
+
+# import {v2 as cloudinary} from 'cloudinary';
+          
+# cloudinary.config({ 
+#   cloud_name: 'dm9pkxus4', 
+#   api_key: '873762269638431', 
+#   api_secret: '8evFdkC6ICCDlYxRui7PI6sDGn8' 
+# });
 
 
